--- a/app.env
+++ b/app.env
@@ -1,2 +1,3 @@
 ENVIRONMENT=development
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
+DB_SOURCE=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable
