--- a/app.env
+++ b/app.env
@@ -1,3 +1,6 @@
 ENVIRONMENT=development
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
 DB_SOURCE=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable
+COOKIE_SECRET=very-secrets
+FIREBASE_SERVICE_ACCOUNT=
+AUTH_ROOT_DOMAIN=
